# 10k-sentences-pipeline

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  anki_sentence_extractor.py  audio_generator.py  pyproject.toml  requirements.txt  translate_sheet_generator.py
